# salpyeobom-backend

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  dev.cmd  dev.py  main.py  pyproject.toml  test.html
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/core/: dependencies.py  email.py  exceptions.py  security.py
app/models/: adl.py  adl_raw.py  enums.py  patient.py  report.py  user.py
app/routers/: adl_raw.py  auth.py  dashboard.py  patients.py  reports.py  situations.py
app/schemas/: adl_raw.py  auth.py  common.py  dashboard.py  patient_monitoring.py  report.py  situation.py  user.py
app/services/: adl_raw.py  adl_raw_transform.py  reports.py
data/derived/: patients.jsonl  patients_syn.jsonl
docs/: database-schema.md  final-report-synthetic-data.md  synthetic-data-plan.md
docs/test/: final_report.docx  postman_collection.json
frontend/: .env.local.example  README.md  index.html  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(app)/: layout.tsx  page.tsx
frontend/app/(app)/adl-raw/: page.tsx
frontend/app/(app)/adl-raw/[id]/: page.tsx
frontend/app/(app)/adl-raw/recipients/[recipientId]/: page.tsx
frontend/app/(app)/patients/: page.tsx
frontend/app/(app)/patients/[patientId]/: page.tsx
frontend/app/(app)/situations/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/components/: action-dialog.tsx  auth-guard.tsx  status-badge.tsx  top-nav.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  dialog.tsx  input.tsx  select.tsx  sonner.tsx  table.tsx  textarea.tsx
frontend/css/: style.css
frontend/js/: app.js  data.js
frontend/lib/: api.ts  auth-context.tsx  queries.ts  types.ts
notebooks/: adl_csv_ingest.ipynb  adl_llm_summary.ipynb  adl_raw_analysis.ipynb  adl_raw_ingest.ipynb  adl_raw_query.ipynb  adl_raw_reset.ipynb
prompts/: report_generation.md
scripts/: dating.py  deploy.sh  install.sh  load_derived.py  prepare_batch.py  render_batch.py  report_generate.py  report_to_docx.py  seed.py  seed_adl.py  seed_adl_raw.py  seed_from_adl.py  seed_users.py  select_report_targets.py  start.sh  status.sh  stop.sh
scripts/synthetic/: README.md  expander.py  run_batch.py  scenario_gen.py  validate_batch.py
tests/: conftest.py  test_adl.py  test_adl_raw.py  test_adl_raw_transform.py  test_auth.py  test_dashboard.py  test_dating.py  test_derived_artifact.py  test_exceptions.py  test_load_derived.py  test_main_cors.py  test_patients.py  test_protected_endpoints_401.py  test_reports.py  test_schemas_validators.py  test_security.py  test_security_extra.py  test_services_reports.py  test_situations.py  test_uat_scenarios.py
