[project]
name = "salpyeobom-backend"
version = "0.1.0"
description = "Salpyeobom backend API"
requires-python = ">=3.11"
dependencies = [
    "aerich>=0.7.2",
    "bcrypt>=4.1.0",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "tortoise-orm[asyncpg]>=0.25.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
